--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,10 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 
 	<!-- Animate CSS -->
-	<link rel="stylesheet" href="stylesheet/animate.css">
+	<link rel="stylesheet" href="stylesheets/animate.css">
+
+	<!-- Hover CSS -->
+	<link href="stylesheets/hover.css" rel="stylesheet" media="all">
 
 
 	<!-- Angular Code -->
